Migrate_data_between_PVs/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    route.openshift.io/termination: edge
spec:
  rules:
  - host: HOSTNAME_GOES_HERE
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
